# BotInformesN8N

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  run_dev_console.bat  run_streamlit_local.bat
.claude/agents/: bot-core-engineer.md  bot-deploy-ops.md  bot-docs-writer.md  bot-informes-builder.md  bot-llm-tuner.md  bot-pyqt-console.md  bot-streamlit-ui.md  bot-test-engineer.md
.github/workflows/: tests.yml
dev_console/: console.py  paths.py  requirements.txt
dev_console/modules/: api_monitor.py  palette_editor.py  prompt_editor.py  slides_editor.py  test_runner.py
docs/: api_usage_plan.md  architecture.md  contributing.md  decisions.md  deployment.md  first_commit.md  manual_usuario.md
streamlit_app/: app.py  requirements.txt
streamlit_app/.streamlit/: config.toml  secrets.toml.example
streamlit_app/assets/: default_palette.json  slides_config.json
streamlit_app/core/: __init__.py  auth.py  color_extractor.py  eda.py  errors.py  indicators.py  llm_indicators.py  metrics.py  pipeline.py  ppt_builder.py  schema.py
streamlit_app/core/prompts/: indicator_analyst.md
tests/: compare_baseline.py  conftest.py  test_auth.py  test_color_extractor.py  test_eda.py  test_errors.py  test_indicators.py  test_llm_indicators.py  test_metrics.py  test_pipeline_e2e.py  test_ppt_builder.py  test_schema.py  test_streamlit_app.py
tests/fixtures/: README.md
