[project]
name = "bot-informes-n8n"
version = "0.1.0"
description = "Generador automático de presentaciones gerenciales a partir de exportes n8n"
authors = [{name = "Quick Help SAS"}]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "anthropic>=0.40",
    "Pillow>=10.4",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "bcrypt>=4.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "PyQt6>=6.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
